<resources>
    <string name="app_name">Biller</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="envoyer">envoyer</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="pas_de_compte_cr_er_un">pas de compte? Créer un</string>
    <string name="mot_de_passe_oubli">mot de passe oublié</string>
    <string name="veuillez_entrer_des_reponses_correctes">Veuillez entrer des reponses correctes</string>
    <string name="votre_animal_pr_f_r">votre animal préféré</string>
    <string name="votre_surnom_de_jeunesse">votre surnom de jeunesse</string>
    <string name="la_marque_de_votre_premier_t_l_phone">la marque de votre premier téléphone</string>
    <string name="confirmez_le_mot_de_passe">Confirmez le mot de passe</string>
    <string name="title_activity_home">Home</string>

    <string name="menu_home">Home</string>
    <string name="nouvel_l_ve">Nouvel élève</string>
    <string name="a_propos">A propos</string>
    <string name="bienvenue_dans_le_petit_carnet_du_r_p_titeur_organis_et_fiable">Bienvenue dans le petit carnet du répétiteur organisé et fiable</string>
    <string name="pas_d_l_ve">no student</string>
    <string name="suivant">Suivant</string>
    <string name="r_initialisation_votre_mot_de_passe">Réinitialisation votre mot de passe</string>
    <string name="annuler">annuler</string>
    <string name="nom_du_parent">nom du parent</string>
    <string name="prenom_du_parent">prenom du parent</string>
    <string name="date_de_payement">Date de payement</string>
    <string name="effacer">Effacer</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="forum">Forum</string>
    <string name="pas_de_forum">pas de forum</string>
    <string name="photo_de_profile">Photo de profile</string>
    <string name="selection_fichier">Sélectionner un fichier</string>
    <string name="gestionnaire_fichier">Gestionnaire de fichier</string>
    <string name="question_reponse">Question-Réponse</string>
    <string name="mon_compte">Mon compte</string>
    <string name="cours">cours</string>
    <string name="exercices">Exercices</string>
    <string name="essaie_de_correction">Essaie de correction</string>
    <string name="outils">Outils</string>
    <string name="informations">Informations</string>
    <string name="nous_contacter">nous_contacter</string>

    <string-array name="classe">
        <item>Niveau scolaire</item>
        <item>Tle C</item>
        <item>Tle D</item>
        <item>Tle A All</item>
        <item>Tle A Esp</item>
        <item>Première C</item>
        <item>Première D</item>
        <item>Première A All</item>
        <item>Première A Esp</item>
        <item>Seconde C</item>
        <item>Seconde A All</item>
        <item>Seconde A Esp</item>
        <item>3eme All</item>
        <item>3eme Esp</item>
        <item>4eme All</item>
        <item>4eme Esp</item>
        <item>5eme</item>
        <item>6eme</item>
        <item>CM2</item>
        <item>CM1</item>
    </string-array>

    <string-array name="elementAffichage">
        <item>Tous</item>
        <item>Physiques</item>
        <item>Chimie</item>
        <item>Mathématiques</item>
        <item>SVT</item>
        <item>Informatique</item>
        <item>Philosophie</item>
        <item>Littérature</item>
        <item>Histoire/Geographie</item>
        <item>ECM</item>
    </string-array>

</resources>