<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_forum"
            android:title="@string/forum" />
        <item
            android:id="@+id/nav_gestionnaire_fichier"
            android:title="@string/gestionnaire_fichier" />
        <item
            android:id="@+id/nav_question_reponse"
            android:title="@string/question_reponse" />
        <item
            android:id="@+id/nav_a_propos"
            android:title="@string/a_propos" />
        <item
            android:id="@+id/nav_compte"
            android:title="@string/mon_compte" />
    </group>
</menu>