<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.MouanjiFranck.biller.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.MouanjiFranck.biller.fragment.FileFragment"
        android:label="@string/nouvel_l_ve"
        tools:layout="@layout/fragment_file" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.MouanjiFranck.biller.fragment.SlideshowFragment"
        android:label="@string/a_propos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_compte"
        android:name="com.MouanjiFranck.biller.fragment.CompteFragment"
        android:label="mon compte"
        tools:layout="@layout/fragment_compte" />
</navigation>