<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arriere_plan"
    tools:context=".Activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/mot_de_passe"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oubli"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_gravity="right"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/log_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pas_de_compte_cr_er_un"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            />

    </LinearLayout>

</ScrollView>