<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arriere_plan"
    tools:context=".Activities.Questions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/veuillez_entrer_des_reponses_correctes"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quest_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votre_animal_pr_f_r"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quest_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votre_surnom_de_jeunesse"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quest_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/la_marque_de_votre_premier_t_l_phone"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/quest_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            />

    </LinearLayout>

</ScrollView>