<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center"
    android:background="@drawable/arriere_plan"
    tools:context=".Activities.CreateAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:textColorHint="@color/white"
                android:layout_marginBottom="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom"
                android:textColorHint="@color/white"
                android:layout_marginBottom="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:layout_marginBottom="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/mot_de_passe"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="30dp"
                android:transitionName="password_tran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/confirmez_le_mot_de_passe"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="30dp"
                android:transitionName="password_tran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_choose_image_profile"
                    android:hint="@string/photo_de_profile"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:clickable="false"
                    />

                <Button
                    android:id="@+id/choose_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="30dp"
                    android:text="choisir un fichier"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Statut"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/professeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Professeur"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/repetiteur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Repetiteur"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/deux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="les deux"
                    android:textColor="@color/white"/>


            </RadioGroup>

            <Button
                android:id="@+id/reg_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envoyer"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>