<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/arriere_plan"
    tools:context=".Activities.UpdatePassword">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="center"
      android:layout_margin="40dp"
      android:gravity="center"
      tools:ignore="UselessParent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_initialisation_votre_mot_de_passe"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/res_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:textColorHint="@color/white"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true"
        android:transitionName="password_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/res_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:textColorHint="@color/white"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true"
        android:transitionName="password_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/res_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/envoyer"
        />

  </LinearLayout>

</ScrollView>