<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragment.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stu_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stu_name_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stu_prenom_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stu_date_payement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:textColorHint="@color/white"
            android:layout_marginBottom="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suivant"/>

    </LinearLayout>
</ScrollView>